# neurotic

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
neurotic/: __init__.py  data.py  loader.py  perceptron.py  training.py
neurotic/classifiers/: __init__.py  perceptron_classifier.py
neurotic/classifiers/multilayer_perceptron_classifier/: activation_functions.py  classifier.py
neurotic/classifiers/neural_network_classifier/: activation_functions.py  classifier.py  error_functions.py
neurotic/data/: loaders.py
neurotic/examples/: multilayer_perceptron.py  neural_network.py  perceptron.py  time_series_prediction.py  using_preprocessor_layer.py
neurotic/examples/internal/: data_loaders.py  paths.py
neurotic/examples/tensorflow_docs/: time_series_ltst.py
neurotic/examples/tutorials/: time_series_ltst.py
neurotic/layers/: preprocessing.py
neurotic/tensorflow_tutorials/: basic_image_classifier.py
