[metadata]
name = neurotic
description = Machine Learning Stuff
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = Gigaquads
url = https://github.com/gigaquads/neurotic.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
    numpy
    tensorflow
    pandas
    matplotlib
    sklearn
    tabulate
